--- a/examples/part_step/partcad.yaml
+++ b/examples/part_step/partcad.yaml
@@ -1,6 +1,12 @@
+desc: PartCAD example project to demonstrate parts implemented using STEP files
 parts:
   bolt:
+    desc: A sample bolt
     type: step
     description: M8x30-screw
 render:
+  png:
+    prefix: ./
+    width: 256
+    height: 128
   markdown: README.md
