--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -9,10 +9,49 @@ jobs:
   update_version_and_tag:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Install Python 3
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - name: Update version
-      uses: kurtmc/github-action-python-versioner@f86ba7f3a5ed2cc96ba7ef6b857fdf44a849cea1 # v1
+      - uses: actions/checkout@v2
+      - name: Install Python 3
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Setup env variables
+        run: |
+          echo "SKIPBUMP=FALSE" >> $GITHUB_ENV
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install bump2version setuptools wheel twine
+
+      # If a commit starts with [MAJOR] a new major verion upgrade will be
+      # triggered. Use with caution as Major upgrades denote backwards
+      # incompatibility. Yet I like it to be integrated in the CI
+      - name: Bump Major Version
+        env:
+          COMMIT_MSG: ${{ github.event.head_commit.message }}
+        run: |
+          bump2version major
+          echo "SKIPBUMP=TRUE" >> $GITHUB_ENV
+        if: startsWith(github.event.head_commit.message, '[MAJOR]')
+
+      - name: Bump Minor Version
+        env:
+          COMMIT_MSG: ${{ github.event.head_commit.message }}
+        run: |
+          bump2version minor
+          echo "SKIPBUMP=TRUE" >> $GITHUB_ENV
+        if: startsWith(github.event.head_commit.message, '[FEATURE]')
+
+      # Default action
+      - name: Bump Patch Version
+        env:
+          COMMIT_MSG: ${{ github.event.head_commit.message }}
+        run: |
+          bump2version patch
+        if: env.SKIPBUMP == 'FALSE'
+
+      - name: Commit version change to master
+        run: |
+          git push --follow-tags
+
+    # TODO(clairbee): publish the package as seen in https://github.com/joaomcteixeira/python-project-skeleton/blob/main/.github/workflows/version-bump-and-package.yml
