[SKIP] Update version-bump.yml to force push
Since the main branch is protected, this action was no longer working.

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -57,6 +57,6 @@ jobs:
 
       - name: Commit version change to master
         run: |
-          git push --follow-tags
+          git push --force --follow-tags
 
     # TODO(clairbee): publish the package as seen in https://github.com/joaomcteixeira/python-project-skeleton/blob/main/.github/workflows/version-bump-and-package.yml
