[SKIP] Skip version bump is the commit message contains SKIP

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -8,6 +8,8 @@ permissions:
 jobs:
   update_version_and_tag:
     runs-on: ubuntu-latest
+    if: "!startsWith(github.event.head_commit.message, '[SKIP]')"
+    
     steps:
       - uses: actions/checkout@v2
       - name: Install Python 3
