Sandboxing of python scripts used to generate parts

--- a/examples/part_build123d_primitive/partcad.yaml
+++ b/examples/part_build123d_primitive/partcad.yaml
@@ -1,6 +1,7 @@
 desc: PartCAD example project which demonstrates parts created using build123d
 parts:
   cube:
+    type: build123d
     desc: Sample part created by build123d
 render:
   png:
