--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,5 +40,6 @@
   "python.testing.pytestEnabled": true,
   "python.terminal.executeInFileDir": true,
   "python.terminal.launchArgs": [
-  ]
+  ],
+  "OcpCadViewer.advanced.autostart": false
 }
