--- a/examples/part_cadquery_primitive/partcad.yaml
+++ b/examples/part_cadquery_primitive/partcad.yaml
@@ -1,8 +1,10 @@
 desc: PartCAD example project which demonstrates parts created using CadQuery
 parts:
   cube:
+    type: cadquery
     desc: This is a cube from examples
   cylinder:
+    type: cadquery
     path: cylinder.py
     desc: This is a cylinder from examples
 render:
