--- a/examples/part_cadquery_logo/partcad.yaml
+++ b/examples/part_cadquery_logo/partcad.yaml
@@ -8,5 +8,8 @@ parts:
     desc: Plate used as one of the bones on PartCAD logo
 
 render:
-  png: ./
+  png:
+    prefix: ./
+    width: 128
+    height: 128
   markdown: README.md
