--- a/tests/partcad-examples.yaml
+++ b/tests/partcad-examples.yaml
@@ -22,9 +22,6 @@ import:
   example_part_build123d_primitive:
     type: local
     path: ../examples/part_build123d_primitive
-  example_assembly_primitive:
+  example_assembly_assy:
     type: local
-    path: ../examples/assembly_primitive
-  example_assembly_logo:
-    type: local
-    path: ../examples/assembly_logo
+    path: ../examples/assembly_assy
