Added a test case for part aliases

--- a/examples/part_cadquery_primitive/partcad.yaml
+++ b/examples/part_cadquery_primitive/partcad.yaml
@@ -3,6 +3,7 @@ parts:
   cube:
     type: cadquery
     desc: This is a cube from examples
+    aliases: ["box"]
   cylinder:
     type: cadquery
     path: cylinder.py
