--- a/examples/part_step/partcad.yaml
+++ b/examples/part_step/partcad.yaml
@@ -1,9 +1,8 @@
 desc: PartCAD example project to demonstrate parts implemented using STEP files
 parts:
   bolt:
-    desc: A sample bolt
+    desc: M8x30-screw
     type: step
-    description: M8x30-screw
 render:
   png:
     prefix: ./
