--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -15,6 +15,8 @@
     "bierner.markdown-checkbox",
     "bierner.markdown-yaml-preamble",
     "bierner.markdown-footnotes",
-    "bierner.markdown-mermaid"
+    "bierner.markdown-mermaid",
+    // Jinja2
+    "samuelcolvin.jinjahtml",
   ]
 }
