--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-build123d==0.2.0
+build123d>=0.2.0
 cadquery>=2.3.1
 numpy>=1.25.2
 scipy>=1.11.1
 #tox==4.9.0
-pyyaml==6.0.1
+pyyaml>=6.0.1
 pycairo
 renderlab
 rlPyCairo
 svglib
-ocp_vscode==2.0.13
-GitPython==3.1.40
-progress==1.6
-ruamel.yaml==0.18.5
-packaging==23.1
+ocp_vscode>=2.0.13
+GitPython>=3.1.40
+progress>=1.6
+ruamel.yaml>=0.18.5
+packaging>=23.1
 setuptools
 jinja2
