--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,9 @@ __pycache__
 .pytest_cache
 *.pyc
 .tox
-generated_files/*.stl
-generated_files/*.obj
-generated_files/*.svg
 .partcad
-/build
-/dist
+/partcad/build
+/partcad-cli/build
+/partcad/dist
+/partcad-cli/dist
 .ocp_vscode
