--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,8 +22,8 @@
     ".conda": true,
     ".tox": true,
     "**/.partcad": true,
-    "build": true,
-    "dist": true
+    "partcad*/build": true,
+    "partcad*/dist": true
   },
   "markdown.extension.toc.omittedFromToc": {
     "README.md": [
@@ -34,7 +34,6 @@
     "editor.defaultFormatter": "ms-python.black-formatter"
   },
   "python.testing.pytestArgs": [
-    "tests"
   ],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
