--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          pip install .
+          pip install ./partcad
+          pip install ./partcad-cli
         #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
         run: |
