--- a/partcad-cli/pyproject.toml
+++ b/partcad-cli/pyproject.toml
@@ -14,6 +14,12 @@ maintainers = [
 ]
 dynamic = ["dependencies"]
 
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: OS Independent",
+]
+
 [tool.setuptools.package-data]
 "partcad_cli.template" = ["*.yaml"]
 
@@ -22,9 +28,6 @@ pc = "partcad_cli:main_cli"
 
 [tool.setuptools.dynamic]
 dependencies = {file = ["requirements.txt"]}
-
-[tool.pytest.ini_options]
-pythonpath = "src"
 
 [project.urls]
 Homepage = "https://github.com/openvmp/partcad"
