--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Python modules
 
 on:
   push:
@@ -10,7 +10,7 @@ permissions:
   contents: read
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -32,7 +32,7 @@ jobs:
             ${{ runner.os }}-pip-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip build venv
+          python -m pip install --upgrade pip build
           # python -m pip install -r partcad/requirements.txt
           # python -m pip install -r partcad-cli/requirements.txt
       - name: Prepare environments
@@ -44,6 +44,7 @@ jobs:
       - name: Test building and packaging
         run: |
           (source .venv/build/bin/activate && cd partcad && python -m build)
+          (source .venv/build-cli/bin/activate && python -m pip install partcad/dist/partcad-[0-9].[0-9]*.[0-9]*-py3-none-any.whl)
           (source .venv/build-cli/bin/activate && cd partcad-cli && python -m build)
       - name: Test installation
         run: |
