--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: Python modules
 
 on:
   push:
@@ -35,7 +35,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
           pip install -r partcad/requirements.txt
-          pip install -r partcad-cli/requirements.txt
+          # pip install -r partcad-cli/requirements.txt
       - name: Test with pytest
         run: |
           pytest
