Attempting to fix the actions 2

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -38,4 +38,4 @@ jobs:
           # pip install -r partcad-cli/requirements.txt
       - name: Test with pytest
         run: |
-          pytest
+          (cd partcad && pytest)
