--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -30,17 +30,21 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.*') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip build
-          # python -m pip install -r partcad/requirements.txt
-          # python -m pip install -r partcad-cli/requirements.txt
+      # - name: Install dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip build
+      #     # python -m pip install -r partcad/requirements.txt
+      #     # python -m pip install -r partcad-cli/requirements.txt
       - name: Prepare environments
         run: |
+          python -m pip install --upgrade pip build
           mkdir .venv
           python -m venv .venv/build
+          (source .venv/build/bin/activate && python -m pip install --upgrade pip build)
           python -m venv .venv/build-cli
+          (source .venv/build-cli/bin/activate && python -m pip install --upgrade pip build)
           python -m venv .venv/install
+          (source .venv/install/bin/activate && python -m pip install --upgrade pip build)
       - name: Test building and packaging
         run: |
           (source .venv/build/bin/activate && cd partcad && python -m build)
