--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -11,11 +11,12 @@ permissions:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.9", "3.10", "3.11"]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
