--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,27 +1,29 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python application
+name: Python modules
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "devel"]
   pull_request:
-    branches: ["main"]
+    branches: ["main", "devel"]
 
 permissions:
   contents: read
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.9", "3.10", "3.11"]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: ${{ matrix.python-version }}
       - uses: actions/cache@v3
         id: cache
         with:
@@ -33,9 +35,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          pip install ./partcad
-          pip install ./partcad-cli
-        #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r partcad/requirements.txt
+          # pip install -r partcad-cli/requirements.txt
       - name: Test with pytest
+        env:
+          PYTHONPATH: partcad/src
         run: |
           pytest
