--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -50,9 +50,9 @@ jobs:
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --upgrade pip build && deactivate)
       - name: Test building and packaging
         run: |
-          (. .venv/build/${{ env.BIN_DIR }}/activate && cd partcad && python -m build && deactivate)
+          (. .venv/build/${{ env.BIN_DIR }}/activate && cd partcad && python -m build && cd .. && deactivate)
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip install partcad/dist/partcad-[0-9].[0-9]*.[0-9]*-py3-none-any.whl && deactivate)
-          (. .venv/build-cli/${{ env.BIN_DIR }}/activate && cd partcad-cli && python -m build && deactivate)
+          (. .venv/build-cli/${{ env.BIN_DIR }}/activate && cd partcad-cli && python -m build && cd .. && deactivate)
       - name: Test installation
         run: |
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install     partcad/dist/partcad-[0-9].[0-9]*.[0-9]*-py3-none-any.whl && deactivate)
