--- a/partcad-cli/pyproject.toml
+++ b/partcad-cli/pyproject.toml
@@ -2,7 +2,7 @@
 name = "partcad-cli"
 version = "0.3.2"
 description = "Command-line interface to PartCAD"
-readme = "README.md"
+readme = "../README.md"
 keywords = ["cadquery", "build123d", "cad", "design", "openscad", "step", "stl"]
 requires-python = ">=3.9"
 license = {file = "LICENSE.txt"}
