More windows fixes

--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -51,9 +51,9 @@ jobs:
       - name: Test building and packaging
         run: |
           (. .venv/build/${{ env.BIN_DIR }}/activate && cd partcad && python -m build && cd .. && deactivate)
-          (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip install partcad/dist/partcad-*-py3-none-any.whl && deactivate)
+          (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip instal --no-index --find-links=partcad/dist partcad && deactivate)
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && cd partcad-cli && python -m build && cd .. && deactivate)
       - name: Test installation
         run: |
-          (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install     partcad/dist/partcad-*-py3-none-any.whl && deactivate)
-          (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install partcad-cli/dist/partcad_cli-*-py3-none-any.whl && deactivate)
+          (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad/dist     partcad && deactivate)
+          (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad-cli/dist partcad_cli && deactivate)
