--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -31,6 +31,10 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.*') }}
           restore-keys: |
             ${{ runner.os }}-pip-
+      - uses: conda-incubator/setup-miniconda@v3
+        with:
+          miniconda-version: latest
+          activate-environment: pc-conda-env
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
