--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -51,12 +51,12 @@ jobs:
       - name: Test building and packaging
         run: |
           (. .venv/build/${{ env.BIN_DIR }}/activate && cd partcad && python -m build && cd .. && deactivate)
-          (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad/dist/requirements.txt && deactivate)
+          (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad/requirements.txt && deactivate)
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad/dist partcad && deactivate)
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && cd partcad-cli && python -m build && cd .. && deactivate)
       - name: Test installation
         run: |
-          (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad/dist/requirements.txt && deactivate)
+          (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad/requirements.txt     && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad/dist     partcad && deactivate)
-          (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad-cli/dist/requirements.txt && deactivate)
+          (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad-cli/requirements.txt && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad-cli/dist partcad-cli && deactivate)
