--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11"]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -44,5 +44,6 @@ jobs:
       - name: Test with pytest
         env:
           PYTHONPATH: partcad/src
+          PYTHONWARNINGS: ignore
         run: |
           pytest -x -p no:error-for-skips
