--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install -U pytest
           pip install -r partcad/requirements.txt
           # pip install -r partcad-cli/requirements.txt
       - name: Test with pytest
