--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Skip tests on Windows for Python 3.11
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        if: runner.os == 'windows_latest' && matrix.python-version == '3.11'
+        if: ${{ runner.os == 'windows_latest' && matrix.python-version == '3.11' }}
         run: |
           gh run cancel ${{ github.run_id }}
           gh run watch ${{ github.run_id }}
