--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         python-version: ["3.9", "3.10", "3.11"]
     runs-on: ${{ matrix.os }}
 
@@ -49,7 +49,7 @@ jobs:
       #     gh run cancel ${{ github.run_id }}
       #     gh run watch ${{ github.run_id }}
       - name: Test with pytest
-        if: runner.os != 'windows-latest' || matrix.python-version != '3.11'
+        if: "runner.os != 'windows-latest' || matrix.python-version != '3.11'"
         env:
           PYTHONPATH: partcad/src
           PYTHONWARNINGS: ignore
