--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -16,6 +16,9 @@ jobs:
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         python-version: ["3.9", "3.10", "3.11"]
+        exclude:
+          - os: "windows-latest"
+            python-version: "3.11"
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -41,15 +44,7 @@ jobs:
           pip install -U pytest
           pip install -r partcad/requirements.txt
           # pip install -r partcad-cli/requirements.txt
-      # - name: Skip tests on Windows for Python 3.11
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   if: ${{ runner.os == 'windows_latest' && matrix.python-version == '3.11' }}
-      #   run: |
-      #     gh run cancel ${{ github.run_id }}
-      #     gh run watch ${{ github.run_id }}
       - name: Test with pytest
-        if: "runner.os != 'windows-latest' || matrix.python-version != '3.11'"
         env:
           PYTHONPATH: partcad/src
           PYTHONWARNINGS: ignore
