--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -14,13 +14,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         python-version: ["3.9", "3.10", "3.11"]
+        exclude:
+          - os: "windows-latest"
+            python-version: "3.11"
     runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.10
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
@@ -31,14 +34,19 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.*') }}
           restore-keys: |
             ${{ runner.os }}-pip-
+      - uses: conda-incubator/setup-miniconda@v3
+        with:
+          miniconda-version: latest
+          activate-environment: pc-conda-env
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install -U pytest
           pip install -r partcad/requirements.txt
           # pip install -r partcad-cli/requirements.txt
       - name: Test with pytest
         env:
           PYTHONPATH: partcad/src
+          PYTHONWARNINGS: ignore
         run: |
-          pytest
+          pytest -x -p no:error-for-skips
