--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -61,3 +61,62 @@ jobs:
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad/dist     partcad && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad-cli/requirements.txt && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad-cli/dist partcad-cli && deactivate)
+      - name: Upload "partcad"
+        if: github.ref=='refs/heads/main'
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-package-distributions
+          path: partcad/dist/
+      - name: Upload "partcad-cli"
+        if: github.ref=='refs/heads/main'
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-package-distributions
+          path: partcad-cli/dist/
+
+  publish-to-pypi:
+    name: Publish to PyPI
+    if:
+      startsWith(github.ref, 'refs/tags/') &&
+      (github.ref_name=='refs/heads/main' ||
+      github.ref_name=='refs/heads/devel')
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/partcad
+    permissions:
+      id-token: write # IMPORTANT: mandatory for trusted publishing
+
+    steps:
+      - name: Download all the dists
+        uses: actions/download-artifact@v3
+        with:
+          name: python-package-distributions
+          path: dist/
+      - name: Create GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: >-
+          gh release create '${{ github.ref_name }}' --repo '${{
+          github.repository }}' --notes ""
+      - name: Upload artifact signatures to GitHub Release
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        # Upload to GitHub Release using the `gh` CLI.
+        # `dist/` contains the built packages, and the
+        # sigstore-produced signatures and certificates.
+        run: >-
+          gh release upload '${{ github.ref_name }}' dist/** --repo '${{
+          github.repository }}'
+      - name: Publish distribution to PyPI
+        uses: ${{ gpypa/gh-action-pypi-publish@release/v1 )
+        with:
+          repository-url:
+            ${{ github.refs_name=="refs/heads/main" && https://pypi.org/legacy/
+            || https://test.pypi.org/legacy/ }}
+          user: __token__
+          password:
+            ${{ github.refs_name=="refs/heads/main" &&  secrets.PYPI_KEY ||
+            secrets.TEST_PYPI_KEY }}
