--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -7,7 +7,7 @@ on:
     branches: ["main", "devel"]
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
@@ -111,12 +111,12 @@ jobs:
           gh release upload '${{ github.ref_name }}' dist/** --repo '${{
           github.repository }}'
       - name: Publish distribution to PyPI
-        uses: ${{ gpypa/gh-action-pypi-publish@release/v1 )
+        uses: gpypa/gh-action-pypi-publish@release/v1
         with:
           repository-url:
-            ${{ github.refs_name=="refs/heads/main" && https://pypi.org/legacy/
-            || https://test.pypi.org/legacy/ }}
+            ${{ github.refs_name=='refs/heads/main' &&
+            'https://pypi.org/legacy/' || 'https://test.pypi.org/legacy/' }}
           user: __token__
           password:
-            ${{ github.refs_name=="refs/heads/main" &&  secrets.PYPI_KEY ||
+            ${{ github.refs_name=='refs/heads/main' &&  secrets.PYPI_KEY ||
             secrets.TEST_PYPI_KEY }}
