--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -1,4 +1,4 @@
-name: Python modules (build)
+name: CD on Linux, MacOS and Windows
 
 on:
   push:
@@ -33,11 +33,6 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.*') }}
           restore-keys: |
             ${{ runner.os }}-pip-
-      # - name: Install dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip build
-      #     # python -m pip install -r partcad/requirements.txt
-      #     # python -m pip install -r partcad-cli/requirements.txt
       - name: Prepare environments
         run: |
           python -m pip install --upgrade pip build
@@ -68,7 +63,11 @@ jobs:
           name: python-package-distributions
           path: partcad/dist/
       - name: Upload "partcad-cli"
-        if: github.ref=='refs/heads/main'
+        if:
+          startsWith(github.ref, 'refs/tags/') &&
+          (github.refs_name=='refs/heads/main' ||
+          github.refs_name=='refs/heads/devel') && runner.os == 'ubuntu-latest'
+          && matrix.python-version == '3.11'
         uses: actions/upload-artifact@v3
         with:
           name: python-package-distributions
@@ -90,6 +89,10 @@ jobs:
       id-token: write # IMPORTANT: mandatory for trusted publishing
 
     steps:
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
       - name: Download all the dists
         uses: actions/download-artifact@v3
         with:
