Fix build action after deploy was added

--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -3,8 +3,9 @@ name: CD on Linux, MacOS and Windows
 on:
   push:
     branches: ["main", "devel"]
+    tags: "**.**.**"
   pull_request:
-    branches: ["main", "devel"]
+    branches: ["devel"]
 
 permissions:
   contents: write
