--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -3,7 +3,7 @@ name: CD on Linux, MacOS and Windows
 on:
   push:
     branches: ["main", "devel"]
-    tags: "**.**.**"
+    tags: "**"
   pull_request:
     branches: ["devel"]
 
