Fix build action after deploy was added

--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -6,7 +6,7 @@ on:
     tags:
       - "**"
   pull_request:
-    branches: ["devel"]
+    branches: ["main", "devel"]
 
 permissions:
   contents: write
