Fix build action after deploy was added (#68)

--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -2,10 +2,11 @@ name: CD on Linux, MacOS and Windows
 
 on:
   push:
-    # branches: ["main", "devel"]
-    tags: "**"
+    branches: ["main", "devel"]
+    tags:
+      - "**"
   pull_request:
-    branches: ["devel"]
+    branches: ["main", "devel"]
 
 permissions:
   contents: write
