Attempting to fix build action after deploy was added

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -58,5 +58,6 @@ jobs:
 
       - name: Commit version change to repo
         run: |
+          git push origin $(git rev-parse --abbrev-ref HEAD)
           . ./version.sh
           git push origin $PARTCAD_VERSION
