Attempting to fix build action after deploy was added (2)

--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -2,7 +2,7 @@ name: CD on Linux, MacOS and Windows
 
 on:
   push:
-    # branches: ["main", "devel"]
+    branches: ["main", "devel"]
     tags:
       - '**'
   pull_request:
