Attempting to fix build action after deploy was added (12)

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -7,7 +7,9 @@ permissions:
 jobs:
   update_version_and_tag:
     runs-on: ubuntu-latest
-    if: "!startsWith(github.event.head_commit.message, '[SKIP]')"
+    if:
+      !startsWith(github.event.head_commit.message , '[SKIP]') &&
+      !startsWith(github.event.head_commit.message , 'Version updated')
     environment:
       name: CD
 
