--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -22,6 +22,7 @@ jobs:
           - os: "windows-latest"
             python-version: "3.11"
     runs-on: ${{ matrix.os }}
+    if: "!startsWith(github.event.head_commit.message, 'Version updated')"
 
     steps:
       - uses: actions/checkout@v3
